# cbun-io-gripper-example-main

./: .gitignore  README.md  bundle.xml
.devcontainer/: devcontainer.json
backend/: CMakeLists.txt
backend/include/weiss_gripkit/: gripkit_cr_easy.h  logging.h  periodic_thread.h  shared_memory.h  value_monitor.h
backend/src/: gripkit_cr_easy.cpp  periodic_thread.cpp
frontend/: settings.gradle.kts
frontend/app/: build.gradle.kts
frontend/app/libs/: api-external-v0-0-6.aar
frontend/app/src/androidTest/java/com/kassowrobots/weissroboticsgripkit/: ExampleInstrumentedTest.kt
frontend/app/src/main/: AndroidManifest.xml
frontend/app/src/main/java/com/kassowrobots/weissroboticsgripkit/: DashboardFragment.kt  DashboardViewModel.kt  GripperData.kt  MainActivity.kt  UserInputEvent.kt
frontend/app/src/main/java/com/kassowrobots/weissroboticsgripkit/extraelements/: StatusMessage.kt
frontend/app/src/main/java/com/kassowrobots/weissroboticsgripkit/gripperanimation/: GripperVisualization.kt
frontend/app/src/main/java/com/kassowrobots/weissroboticsgripkit/krelements/: KRButton.kt  KRContent.kt  KRHeading2.kt  KRSwitch.kt
frontend/app/src/main/res/values/: strings.xml  themes.xml
frontend/app/src/test/java/com/kassowrobots/weissroboticsgripkit/: ExampleUnitTest.kt
frontend/gradle/wrapper/: gradle-wrapper.properties
